# guide-generator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: guide-generator.mdc
_ai/: buildlog.md
audiences/: _template.child.md  _template.root.md  history_culture_lover.md  landscape_photographer.md  photographer.md
data/: system.example.yaml
data/trips/: _example.yaml
docs/: AI_RUNBOOK.md  APPROACH.md  GETTING_STARTED.md  GUIDE_BUILD_PROCESS.md  GUIDE_WORKFLOW.md  MAPS.md  OBSIDIAN.md  PDF.md  VISION.md
docs/tasks/: .gitkeep
src/guide_generator/: __init__.py  system.py
src/guide_generator/audiences/: __init__.py  __main__.py  loader.py  models.py  resolve.py  sections.py  validate.py
src/guide_generator/maps/: __init__.py  __main__.py  build.py  coords_yaml.py  extract.py
src/guide_generator/pdf/: __init__.py  __main__.py  build.py  merge.py  preprocess.py
src/guide_generator/pdf/assets/: guide.css
src/guide_generator/topics/: __init__.py  __main__.py  scaffold.py
tests/: test_audiences.py  test_maps_extract.py  test_pdf_preprocess.py  test_system.py  test_topics.py
topics/_template/_ai/research/: _TEMPLATE.md
