[project]
name = "guide-generator"
version = "0.1.0"
description = "Custom travel guides built for audience profiles"
readme = "docs/VISION.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["guide_generator"]

[tool.hatch.build.targets.sdist]
only-include = ["guide_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
