[project]
name = "guide-generator"
version = "0.1.0"
description = "Custom travel guides built for audience profiles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
pdf = [
    "markdown>=3.5",
    "xhtml2pdf>=0.2.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["guide_generator"]

[tool.hatch.build.targets.wheel.force-include]
"src/guide_generator/pdf/assets" = "guide_generator/pdf/assets"

[tool.hatch.build.targets.sdist]
only-include = ["guide_generator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
